# ML-From-Scratch

./: .gitignore  CMakeLists.txt  Layer.h  MatrixNetwork.cpp  MatrixNetwork.h  Network.h  Node.h  README.md  legacy.txt  main.cpp  package-lock.json  package.json
Classes/: Layer.h  Network.cpp  Node.cpp  Node.h
UI/: server.js
UI/public/: index.css  index.html  index.js
src/: main.cpp
src/classes/: Layer.cpp  MatrixNetwork.cpp  MatrixNetwork.h  Network.h
